# eclipse-horizon-checker

./: .gitignore  Contributing.md  README.md  eclipse_horizon.py  index.html  prepare_canopy.py  prepare_clearance.py  pyproject.toml
canopy_tiles/: tiles.json
canopy_tiles_2/: tiles.json
clearance_tiles/: clearance.json
